fix(review-rating): fixed bug with bg gradient not showing if multiple reviewRatings on a page
fixed bug with bg gradient not showing if multiple reviewRatings on a page. also fixed a small
styling issue with margins

HEYUI-307

--- a/packages/review-rating/src/styles/default.module.css
+++ b/packages/review-rating/src/styles/default.module.css
@@ -29,7 +29,6 @@
     & .completeScore {
       & .score {
         @mixin typography-heading-5_mobile;
-        margin-right: 0;
       }
       & .max {
         display: none;
@@ -157,7 +156,6 @@
   color: var(--color-neutral-500);
 
   & .score {
-    margin-right: var(--spacing-1);
     color: var(--color-neutral-700);
   }
 }
